--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
 
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header_value">
+
         <div class="container">
-            <img src="img/Logo (1).png" alt="Logo Boolean">
-            <span>Toboolist</span>
+            <img id="logo" src="img/Logo (1).png" alt="Logo Boolean">
+            <span id="title">Toboolist</span>
         </div>
         
     </header>
 
-    <main>
+    <main id="background">
 
     </main>
 </body>
