--- a/index.html
+++ b/index.html
@@ -11,20 +11,33 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header_value">
 
-        <div class="container">
+        <div>
             <img id="logo" src="img/Logo (1).png" alt="Logo Boolean">
-            <span id="title">Toboolist</span>
+            <h1 id="title">Toboolist</h1>
         </div>
         
     </header>
 
     <main id="background">
 
+        <div class="whitecontainer">
+            <div class="space">
+                <span class="add_task margin_left">Add Task</span>
+                <span class="add_sections">Add Section</span>
+                
+                <br/>
+
+                <h2 class="margin_left">New Task</h2>
+                <br/>
+                <p class="margin_left check">Quarterly Newsletter Editorial</p>
+            </div>
+
+        </div>
     </main>
 </body>
 </html>
