New task completed

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 
                 <br/>
 
-                <h2 class="margin_left">New Task</h2>
+                <h2 class="margin_left" id="newtask">New Task</h2>
                 <br/>
-                <p class="margin_left check">Quarterly Newsletter Editorial</p>
+                <p class="margin_left check font">Quarterly Newsletter <span class="editorial">Editorial</span></p>
             </div>
 
         </div>
