--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <header id="header_value">
 
-        <div>
+        <nav>
             <img id="logo" src="img/Logo (1).png" alt="Logo Boolean">
             <h1 id="title">Toboolist</h1>
-        </div>
+        </nav>
         
     </header>
 
@@ -32,9 +32,34 @@
                 
                 <br/>
 
-                <h2 class="margin_left" id="newtask">New Task</h2>
+                <h2 class="margin_left section">New Task</h2>
                 <br/>
                 <p class="margin_left check font">Quarterly Newsletter <span class="editorial">Editorial</span></p>
+
+                <br/>
+
+                <h2 class="margin_left section">Today</h2>
+                <br/>
+                <p class="margin_left check font">Recruiting blog post <span class="editorial">Editorial</span></p>
+                <br/>
+                <p class="margin_left check font">Mobile app Launch <span class="q1goals">Q1 Goals</span></p>
+                <br/>
+                <p class="margin_left cross font">Interview John H. <span class="recruiting">Recruiting</span></p>
+                <br/>
+                <p class="margin_left check font">Summit update to mobile storefronts<span class="mobile">Mobile</span></p>
+
+                <br/>
+
+                <h2 class="margin_left section">Upcoming</h2>
+                <br/>
+                <p class="margin_left cross font">Schedule meeting with Alex</p>
+                <br/>
+                <p class="margin_left check font">Homepage refresh <span class="website">Website</span></p>
+                <br/>
+                <p class="margin_left check font">OnBoard<span class="sales">Sales</span></p>
+                <br/>
+                <p class="margin_left check font">Review editorial calendar<span class="editorial">Editorial</span></p>
+
             </div>
 
         </div>
