Ottimizzato codice + aggiunti 2 commenti

--- a/index.html
+++ b/index.html
@@ -16,51 +16,60 @@
 <body>
     <header id="header_value">
 
-        <nav>
-            <img id="logo" src="img/Logo (1).png" alt="Logo Boolean">
-            <h1 id="title">Toboolist</h1>
-        </nav>
+        <img id="logo" src="img/Logo (1).png" alt="Logo Boolean">
+        <h1 id="title">Toboolist</h1>
         
     </header>
 
-    <main id="background">
+    <main>
 
         <div class="whitecontainer">
-            <div class="space">
+
+            <nav>
                 <span class="add_task margin_left">Add Task</span>
                 <span class="add_sections">Add Section</span>
+            </nav>
+
+            <br/>
+
+            <section>
+                <h2 class="margin section">New Task</h2>
+                <br/>
+                <p class="margin check font">Quarterly Newsletter <span class="editorial">Editorial</span></p>
+
+            </section>
+
+            <br/>
+
+            <section>
+
+                <h2 class="margin section">Today</h2>
+                <br/>
+                <p class="margin check font">Recruiting blog post <span class="editorial">Editorial</span></p>
+                <br/>
+                <p class="margin check font">Mobile app Launch <span class="q1goals">Q1 Goals</span></p>
+                <br/>
+                <p class="margin cross font">Interview John H. <span class="recruiting">Recruiting</span></p>
+                <br/>
+                <p class="margin check font">Summit update to mobile storefronts<span class="mobile">Mobile</span></p>
+
+            </section>
                 
-                <br/>
+            <br/>
 
-                <h2 class="margin_left section">New Task</h2>
-                <br/>
-                <p class="margin_left check font">Quarterly Newsletter <span class="editorial">Editorial</span></p>
+            <section>
 
+                <h2 class="margin section">Upcoming</h2>
                 <br/>
+                <p class="margin cross font">Schedule meeting with Alex</p>
+                <br/>
+                <p class="margin check font">Homepage refresh <span class="website">Website</span></p>
+                <br/>
+                <p class="margin check font">OnBoard<span class="sales">Sales</span></p>
+                <br/>
+                <p class="margin check font">Review editorial calendar<span class="editorial">Editorial</span></p>
 
-                <h2 class="margin_left section">Today</h2>
-                <br/>
-                <p class="margin_left check font">Recruiting blog post <span class="editorial">Editorial</span></p>
-                <br/>
-                <p class="margin_left check font">Mobile app Launch <span class="q1goals">Q1 Goals</span></p>
-                <br/>
-                <p class="margin_left cross font">Interview John H. <span class="recruiting">Recruiting</span></p>
-                <br/>
-                <p class="margin_left check font">Summit update to mobile storefronts<span class="mobile">Mobile</span></p>
-
-                <br/>
-
-                <h2 class="margin_left section">Upcoming</h2>
-                <br/>
-                <p class="margin_left cross font">Schedule meeting with Alex</p>
-                <br/>
-                <p class="margin_left check font">Homepage refresh <span class="website">Website</span></p>
-                <br/>
-                <p class="margin_left check font">OnBoard<span class="sales">Sales</span></p>
-                <br/>
-                <p class="margin_left check font">Review editorial calendar<span class="editorial">Editorial</span></p>
-
-            </div>
+            </section>
 
         </div>
     </main>
