Modificato nav, da span a button

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="whitecontainer">
 
             <nav>
-                <span class="add_task margin_left">Add Task</span>
-                <span class="add_sections">Add Section</span>
+                <button class="add_task margin_left">Add Task</button>
+                <button class="add_sections">Add Section</button>
             </nav>
 
             <br/>
