Eliminata classe font

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
                 <h2 class="margin section">Today</h2>
                 <br/>
-                <p class="margin check font">Recruiting blog post <span class="editorial">Editorial</span></p>
+                <p class="margin check ">Recruiting blog post <span class="editorial">Editorial</span></p>
                 <br/>
-                <p class="margin check font">Mobile app Launch <span class="q1goals">Q1 Goals</span></p>
+                <p class="margin check ">Mobile app Launch <span class="q1goals">Q1 Goals</span></p>
                 <br/>
-                <p class="margin cross font">Interview John H. <span class="recruiting">Recruiting</span></p>
+                <p class="margin cross ">Interview John H. <span class="recruiting">Recruiting</span></p>
                 <br/>
-                <p class="margin check font">Summit update to mobile storefronts<span class="mobile">Mobile</span></p>
+                <p class="margin check ">Summit update to mobile storefronts<span class="mobile">Mobile</span></p>
 
             </section>
                 
@@ -61,13 +61,13 @@
 
                 <h2 class="margin section">Upcoming</h2>
                 <br/>
-                <p class="margin cross font">Schedule meeting with Alex</p>
+                <p class="margin cross ">Schedule meeting with Alex</p>
                 <br/>
-                <p class="margin check font">Homepage refresh <span class="website">Website</span></p>
+                <p class="margin check ">Homepage refresh <span class="website">Website</span></p>
                 <br/>
-                <p class="margin check font">OnBoard<span class="sales">Sales</span></p>
+                <p class="margin check ">OnBoard<span class="sales">Sales</span></p>
                 <br/>
-                <p class="margin check font">Review editorial calendar<span class="editorial">Editorial</span></p>
+                <p class="margin check ">Review editorial calendar<span class="editorial">Editorial</span></p>
 
             </section>
 
